# mag

./: Cargo.toml
src/: main.rs
src/archive/: mod.rs
src/cmd/: mod.rs  parse.rs  service.rs
src/fetcher/: mod.rs  modrinth.rs  ratelimit.rs
src/service/: mod.rs  query.rs
src/tag/: data.rs  mod.rs
