[package]
name = "mag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["string"] }
human-panic = "2.0.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4"
parking_lot = { version = "0.12" }
prettytable-rs = "0.10.0"
env_logger = "0.11"
rayon = "1.10"
reqwest = "0.12"
rocket = "0.5"
rocket_db_pools = { version = "0.2", features = [
    "diesel_postgres",
    "sqlx_postgres",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
temp-dir = "0.1"
temp-file = "0.1.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
walkdir = "2.5"
zip = "1.1"
